--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
       </div>
       <div class="purchase-summary">
         <h1>PURCHASE SUMMARY</h1>
-        <h2>Title:<span class="title"></span></h2>
-        <h2>Release:<span class="release"></span></h2>
-        <h2>Time:<span class="time"></span></h2>
-        <h2>Ticket type:<span class="type"></span></h2>
-        <h3>Total cost:<span class="total"></span></h3>
+        <h2>Title: <span class="title"></span></h2>
+        <h2>Release: <span class="release"></span></h2>
+        <h2>Time: <span class="time"></span></h2>
+        <h2>Ticket type: <span class="type"></span></h2>
+        <h3>Total cost: $<span class="total"></span></h3>
       </div>
     </div>
   </body>
